--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/cmueller36/liri-node-app/issues"
   },
-  "homepage": "https://github.com/cmueller36/liri-node-app#readme"
+  "homepage": "https://github.com/cmueller36/liri-node-app#readme",
+  "dependencies": {
+    "dotenv": "^6.0.0",
+    "fs": "0.0.1-security",
+    "request": "^2.87.0",
+    "twitter": "^1.7.1"
+  }
 }
