--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "node-spotify-api": "^1.0.7",
     "request": "^2.87.0",
     "spotify": "^0.3.0",
-    "twitter": "^1.7.1"
+    "twitter": "^1.7.1",
+    "yarn": "^1.7.0"
   }
 }
